--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,10 +28,29 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
+
+# variables to direct users
+# vars:
+#   64SQSDJOSHIIN:
+#     database: DEV
+#     raw_data_schema: JAFFLE_SHOP
+#   QA_USER:
+    # database: QA
+    # raw_data_schema: JAFFLE_SHOP
+
+vars:
+  jaffle_shop:
+    64SQSDJOSHIIN:
+      database: DEV
+      raw_data_schema: JAFFLE_SHOP
+    QA_USER:
+      database: QA
+      raw_data_schema: JAFFLE_SHOP
+
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+
 models:
   jaffle_shop:
     +materialized: table
-
