changes in base database

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,13 +42,13 @@ vars:
   jaffle_shop:
     64SQSDJOSHIIN:
       database: DEV
-      raw_data_schema: JAFFLE_SHOP
+      raw_data_schema: EDW_DATASTAGE
     QA_USER:
       database: QA
-      raw_data_schema: JAFFLE_SHOP
+      raw_data_schema: EDW_DATASTAGE
     PROD_USER:
       database: PROD
-      raw_data_schema: JAFFLE_SHOP
+      raw_data_schema: EDW_DATASTAGE
 
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
